[package]
name = "pagos-multicanal-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.8.8", features = ["default"] }
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.49.0", features = ["full"] }
